# cargo-no-std-check

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: crates.rs
tests/crates/externstd/: Cargo.toml
tests/crates/externstd/src/: lib.rs
tests/crates/macro_impl/: Cargo.toml
tests/crates/macro_impl/src/: lib.rs
tests/crates/macro_user/: Cargo.toml
tests/crates/macro_user/src/: lib.rs
tests/crates/nostd/: Cargo.toml
tests/crates/nostd_buildrs/: Cargo.toml  build.rs
tests/crates/nostd_dep_externstd/: Cargo.toml
tests/crates/nostd_dep_externstd/src/: lib.rs
tests/crates/nostd_dep_nostd/: Cargo.toml
tests/crates/nostd_dep_nostd/src/: lib.rs
tests/crates/nostd_dep_withstd/: Cargo.toml
tests/crates/nostd_dep_withstd/src/: lib.rs
tests/crates/withstd/: Cargo.toml
