[package]
name = "cargo-no-std-check"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
rustc_version = "0.2.3"
indicatif = "0.13.0"
console = "0.9.1"
walkdir = "2.2.9"
shell-escape = "0.1.4"
tempdir = "0.3.7"

[dev-dependencies]
assert_cmd = "0.12.0"
