[package]
name = "cargo-no-std-check"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"
description = "Check that a crate builds without std"
readme = "README.md"
repository = "https://github.com/mystor/cargo-no-std-check"
categories = ["command-line-utilities", "development-tools", "no-std"]
keywords = ["cli", "std", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.26"
rustc_version = "0.2.3"
indicatif = "0.13.0"
console = "0.9.1"
walkdir = "2.2.9"
shell-escape = "0.1.4"
tempdir = "0.3.7"

[dev-dependencies]
assert_cmd = "0.12.0"
